  - --rpc-trust-localhost option has been deprecated, in favor of a more
    generic --http-trust option, allowing an arbitrary IP adresse or range
  - --debug option can be specified multiple times, for additional verbosity
  - --no-inventory, --no-ocsdeploy, --no-snmpquery, --no-netdiscovery options
    have been deprecated in favor of a generic --no-task option
  - --no-environment allows to not list environment variables in inventory
* fusioninventory-agent-config executable has been dropped, in favor of better
  documentation
* documentation has been reviewed for consistency in various places where it
  appears (--help output, man page, configuration file)
* XML::TreePP perl module is now used instead of XML::Simple, reducing native
  perl modules dependencies
* OcsDeploy task is now deprecated. Please continue to use the 2.1.x agent is
  you need it.

Minor changes:
* Add the HARDWARE/CHASSIS_TYPE information
* Linux: Use /sbin/ip to get the interface IP addresses (#854)
* HPUX: don't report unoccupied memory slots

2.1.12  Wed, 14 Dec 2011 13:06:44 +0100

TEST-SUITE
 ✔ 2.1.10 Test suite fails
       commit:8035bd
     http://forge.fusioninventory.org/issues/1161
   thanks: Remi Collet

WINDOWS
 ✔ VM System incorrect
       commit:b59a09
     http://forge.fusioninventory.org/issues/1391
   thanks: Mario Gzuk
 ✔ Fix the CPU detection on Windows 
   thanks: Anthony Facchin

2.1.12  Wed, 23 Nov 2011 18:14:52 +0100

GENERIC
 ✔ Memory: Add ECC / no ECC information
       commit:b01f6f
     http://forge.fusioninventory.org/issues/1234
   thanks: Walid Nouh, jerome slayer

LINUX
 ✔ Duplication virtualmachine name on the same machine
       commit:982c08
     http://forge.fusioninventory.org/issues/1140
   thanks: DuyLong LE

WINDOWS
 ✔ [windows] Virtual network adapter reported as physical - and breaks all computer linking in GLPI
       commit:5b4a1e
     http://forge.fusioninventory.org/issues/1166
   thanks: David Durieux, V'yacheslav Stetskevych