@@ -40,11 +40,7 @@ lazy = 0
 #
 
 # do not list local printers
-no-printer = 0
-# do not list installed software
-no-software = 0
-# do not list environment variables
-no-environment = 0
+# no-category = printer
 # allow to scan use home directories
 scan-homedirs = 0
 # save the inventory as HTML
