@@ -36,10 +36,8 @@ GetOptions(
     'logger=s',
     'logfile=s',
     'logfile-maxsize=i',
-    'no-printer',
+    'no-category=s',
     'no-httpd',
-    'no-software',
-    'no-environment',
     'no-ssl-check',
     'no-task=s',
     'no-p2p',
@@ -63,6 +61,8 @@ GetOptions(
     'no-wakeonlan',
     'no-snmpquery',
     'no-netdiscovery',
+    'no-printer',
+    'no-software',
     'rpc-trust-localhost',
     'rpc-port',
     'rpc-ip',
@@ -140,9 +140,7 @@ B<fusioninventory-agent> [options] [--server server|--local directory|--sdout]
     --no-task=TASK      do not run given task
 
   Inventory task specific options
-    --no-printer        do not list local printers (false)
-    --no-software       do not list installed software (false)
-    --no-environment    do not list environment variables (false)
+    --no-category=CATEGORY do not list given category items
     --scan-homedirs     allow to scan use home directories (false)
     --html              save the inventory as HTML (false)
     -f --force          always send data to server (false)
@@ -359,17 +357,9 @@ List available tasks and exit
 
 =over
 
-=item B<--no-printer>
+=item B<--no-category>=I<CATEGORY>
 
-Do not list local printers in inventory.
-
-=item B<--no-software>
-
-Do not list installed software in inventory.
-
-=item B<--no-environment>
-
-Do not list environment variables in inventory.
+Do not list given category items in inventory.
 
 =item B<--scan-homedirs>
 
