@@ -8,7 +8,7 @@ use FusionInventory::Agent::Tools;
 sub isEnabled {
     my (%params) = @_;
 
-    return !$params{no_software};
+    return !$params{no_category}->{software};
 }
 
 sub doInventory {
